--- a/pom.xml
+++ b/pom.xml
@@ -377,9 +377,8 @@
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core</artifactId>
+        <artifactId>log4j-core-test</artifactId>
         <version>${project.version}</version>
-        <type>test-jar</type>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
