--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -312,7 +312,7 @@
     <!-- Used for testing HttpAppender -->
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
+      <artifactId>wiremock-jre8</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
