--- a/pom.xml
+++ b/pom.xml
@@ -317,6 +317,7 @@
     <!-- Used in `log4j-appserver`, so that it does not override `wiremock`'s deps-->
     <jetty.version>9.4.49.v20220914</jetty.version>
     <netty-all.version>4.1.80.Final</netty-all.version>
+    <wiremock.version>2.34.0</wiremock.version>
   </properties>
   <pluginRepositories>
     <pluginRepository>
@@ -1034,9 +1035,8 @@
       <!-- Used for testing HttpAppender -->
       <dependency>
         <groupId>com.github.tomakehurst</groupId>
-        <artifactId>wiremock</artifactId>
-        <!--  2.27.2 causes WatchHttpTest to fail. -->
-        <version>2.26.3</version>
+        <artifactId>wiremock-jre8</artifactId>
+        <version>${wiremock.version}</version>
       </dependency>
       <dependency>
         <groupId>org.xmlunit</groupId>
